src/desktop/src/ui/views/onboarding/index.scss
$header: 110px;
$footer: 70px;

.onboarding {
    flex-direction: column;
    align-items: center;
    justify-content: space-between;

    header {
        width: 100%;
        height: $header;
        display: flex;
        align-items: center;
        justify-content: center;
        position: relative;

        a {
            position: absolute;
            top: 50px;
            right: 30px;
            &:hover {
                color: var(--primary);
            }
        }
    }

    > div:first-of-type > div {
        position: absolute;
        top: $header;
        left: 0px;
        height: calc(100% - #{$header});
        width: 100%;
        z-index: 2;

        > form {
            flex: 1;
            display: flex;
            flex-direction: column;
            align-items: center;
            justify-content: center;
            width: 100%;
            height: 100%;
            padding-bottom: 230px;

            section {
                width: calc(100vw - 40px);
                max-width: 640px;
                text-align: center;

                &.wide {
                    max-width: none;
                }

                > p {
                    margin-bottom: 50px;
                }
            }
        }
    }

    footer {
        position: absolute;
        bottom: 0px;
        height: $footer;
        width: 100%;
        display: flex;
        align-items: stretch;
        * {
            flex: 1;
        }
    }

    @media print {
        footer,
        header,
        nav,
        h1,
        p {
            display: none;
        }
    }
}

.highlight {
    color: var(--primary);
    margin: 0 2px;
}

.steps {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    padding: 0px;
    li {
        display: block;
        list-style: none;
        width: 12px;
        height: 12px;
        background: var(--body-alt);
        margin: 0 18px;
        position: relative;
        border-radius: 12px;
        > span {
            display: block;
            width: 12px;
            height: 12px;
            background: var(--primary);
            transform: scale(0);
            border-radius: 12px;
            transition: transform 0.2s ease-out;
        }
        &:before,
        &:after {
            content: '';
            display: block;
            position: absolute;
            top: 5px;
            left: -36px;
            height: 2px;
            width: 36px;
            background: var(--body-alt);
            transition: width 0.2s ease-out;
        }
        &:after {
            width: 0px;
            background: var(--primary);
        }
        &:first-child:before,
        &:first-child:after {
            display: none;
        }
    }
    .active {
        > span {
            background: var(--primary);
            transform: scale(1);
            transition: transform 0.4s ease-out;
        }
        &:after {
            width: 36px;
        }
    }
}

.seed {
    display: block;
    margin: 32px auto;
    width: calc(100vw - 40px);
    max-width: 920px;
    text-align: left;

    &.narrow {
        max-width: 460px;
        margin-bottom: 16px;
        padding-left: 30px;
        text-align: center;
        position: relative;
    }

    button,
    > div > span {
        display: inline-block;
        background: transparent;
        border: none;
        color: var(--secondary);
        font-size: 24px;
        line-height: 46px;
        height: 48px;
        margin: 0;
        font-family: 'SourceCodePro';
        transition: transform 0.1s cubic-bezier(0.4, 0, 0.6, 1);

        &.disabled {
            opacity: 0.1;
            color: var(--body);
        }

        &:hover {
            position: relative;
            cursor: pointer;
            color: var(--primary);
            transform: scale(1.5);
        }

        &:active {
            transform: scale(2);
        }

        &:focus {
            outline: 0;
        }
    }

    > div {
        padding: 10px 0;
        display: flex;
        flex-wrap: wrap;
        align-items: center;
        justify-content: center;
        button {
            flex: 0 0 3.6%;
        }
        > span {
            flex: 0 0 33.33%;
            letter-spacing: 18px;
            text-align: center;
            line-height: 32px;
            height: 43px;
            font-size: 24px;
            position: relative;
            color: var(--primary);
            pointer-events: none;
            em {
                position: absolute;
                display: block;
                background: var(--secondary);
                width: 26px;
                height: 26px;
                top: 2px;
                left: -48px;
                font-style: normal;
                line-height: 26px;
                font-size: 14px;
                padding: 0px;
                letter-spacing: 0px;
                color: var(--secondary-body);
            }
        }
    }

    > div:nth-child(2) {
        margin-top: 6px;
        line-height: 21px;
        vertical-align: middle;

        > strong {
            margin: 0 4px;
            color: var(--primary);
            letter-spacing: 1;
        }
        > div {
            padding-top: 4px;
        }
    }
}

.choice {
    margin: 80px auto 0;
    width: 100%;
    max-width: 680px;
    display: flex;
    justify-content: space-between;
    align-items: center;

    > a,
    > span {
        flex-basis: 30.5%;
        border-radius: 6px;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-content: center;
        border: 1px solid var(--body-alt);
        background: var(--dark);
        transition: background 0.8s cubic-bezier(0.075, 0.82, 0.165, 1);
        position: relative;

        &.secure {
            border-color: var(--body);
            flex: 0 0 34%;
            border-radius: 0px 0px 6px 6px;
            padding: 10px 0;
        }

        > div {
            display: block;
            position: relative;
            margin: 28px auto;
            width: 60px;
            height: 60px;
            padding: 18px;
            &:before,
            &:after {
                content: '';
                position: absolute;
                top: 50%;
                left: 50%;
                transform: translate(-50%, -50%);
                width: calc(100% + 12px);
                height: calc(100% + 12px);
                border: 1px solid var(--body-alt);
                border-radius: 100%;
                transition: all 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
                z-index: 2;
            }
            &:after {
                width: 100%;
                height: 100%;
                background: var(--body-bg);
                border: none;
                transition: all 0.8s cubic-bezier(0.075, 0.82, 0.165, 1);
                z-index: 1;
            }
            span {
                position: relative;
                z-index: 3;
            }
        }

        &:hover {
            background: var(--dark-hover);
            > div {
                &:before {
                    transform: translate(-50%, -50%) scale(1.15);
                    border-color: var(--body);
                }
                &:after {
                    transform: translate(-50%, -50%) scale(0.9);
                }
            }
        }

        h4 {
            margin: 0px;
            font-size: 18px;
            line-height: 21px;
            margin-bottom: 38px;
            padding: 0 20px;
        }

        h3 {
            position: absolute;
            top: -34px;
            left: -1px;
            line-height: 34px;
            text-align: center;
            width: calc(100% + 2px);
            background: var(--body);
            color: var(--body-bg);
            font-size: 14px;
            border-radius: 6px 6px 0px 0px;
        }
    }
}

.arrows {
    display: block;
    position: absolute;
    top: 50%;
    right: -60px;
    margin-top: -80px;

    a {
        display: block;
        width: 45px;
        height: 45px;
        font-size: 14px;
        background: var(--primary);
        color: var(--primary-body);
        padding-top: 11px;

        &:hover {
            background: var(--primary-hover);
        }

        &:first-child {
            background: var(--dark);
            span {
                color: var(--dark-body);
            }
            &:hover {
                background: var(--dark-hover);
            }
        }

        span {
            font-family: 'Icons';
            color: var(--primary-body);
        }

        &.disabled {
            opacity: 0.25;
            pointer-events: none;
        }
    }
    > span {
        margin: 8px 40px;
        font-size: 18px;
    }
}

@keyframes fly {
    to {
        transform: translate(0, 0);
    }
}

.done {
    position: relative;

    h1,
    p {
        position: relative;
        z-index: 2;
    }
    p {
        margin: 40px auto;
        max-width: 320px;
        line-height: 24px;
    }
    svg {
        position: absolute;
        width: 320px;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        opacity: 0.06;
        path {
            fill: var(--body);
        }
        g,
        > path {
            animation: fly 6s cubic-bezier(0.075, 0.82, 0.165, 1) forwards;
        }
        :global {
            #baloon-mask {
                fill: var(--body-bg);
                opacity: 1;
            }
            #baloon-1 {
                transform: translate(0, 40%);
            }
            #baloon-2 {
                transform: translate(0, 30%);
            }
            #baloon-3 {
                transform: translate(0, 60%);
            }
        }
    }
}

